refactor: improve documentation and formatting in annotation classes for clarity